<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primerfondo">

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="65dp"
        android:gravity="center"
        android:text="@string/texto_init_interfaz"
        android:textSize="60sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonfamguy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonfamguy"
        android:layout_width="152dp"
        android:layout_height="83dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="113dp"
        android:backgroundTint="#B65050"
        android:text="@string/texto_init_interfaz1"
        app:layout_constraintBottom_toTopOf="@+id/buttonfuturama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto" />

    <Button
        android:id="@+id/buttonfuturama"
        android:layout_width="152dp"
        android:layout_height="83dp"
        android:layout_marginStart="120dp"

        android:layout_marginEnd="113dp"
        android:backgroundTint="#B65050"
        android:text="@string/texto_init_interfaz2"
        app:layout_constraintBottom_toTopOf="@+id/buttonsouthpark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonfamguy" />

    <Button
        android:id="@+id/buttonsouthpark"
        android:layout_width="152dp"
        android:layout_height="83dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="#B65050"
        android:text="@string/texto_init_interfaz3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonfuturama" />

    <Button
        android:id="@+id/salirinterfaz"
        android:layout_width="152dp"
        android:layout_height="83dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="40dp"
        android:text="Salir"
        android:backgroundTint="#B65050"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsouthpark"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>